<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/country"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvCountry"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/cases"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvCases"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/recovered"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvRecovered"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/critical"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvCritical"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/active"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvActive"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_cases"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvTodayCases"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/total_deaths"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvTotalDeaths"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_deaths"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:id="@+id/tvTodayDeaths"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_two"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/state_wise_cases_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@color/color_one"
        android:text="@string/track_states"
        android:visibility="gone"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:padding="5dp"/>
    <Button
        android:id="@+id/find_vaccination_center_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@color/color_one"
        android:text="@string/find_vaccination_center"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:visibility="gone"
        android:padding="5dp"/>


</LinearLayout>